fixed height and spacing

--- a/src/components/shared/nav-bar/nav-items/nav-items.module.scss
+++ b/src/components/shared/nav-bar/nav-items/nav-items.module.scss
@@ -80,6 +80,5 @@
 
   .navLi {
     padding-bottom: 3.125rem;
-    font-size: 1rem;
   }
 }
